<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.josejavier.formularioderegistro.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/ghostwhite">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/formulario"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/nombre"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:textSize="25sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:id="@+id/eNombre"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/apellido"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellido"
                android:id="@+id/eApellido"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/celular" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/celular"
                android:id="@+id/eCelular"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/correo" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo"
                android:id="@+id/eMail"
                android:inputType="textWebEmailAddress"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/ciudad" />

            <Spinner
                android:id="@+id/sCiudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/sexo" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/rMasculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masculino"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/rFemenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/femenino"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/fecha" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/fecha"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:background="@color/lavender"
                android:id="@+id/bFecha"
                android:onClick="Fecha"
                android:layout_margin="2dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha"
                android:id="@+id/eFecha"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/hobbie" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox android:id="@+id/cCine"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cine"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/cComer"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/comer"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/cDeporte"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/deporte"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/cDormir"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/dormir"
                android:onClick="onCheckboxClicked"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/contraseña" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contraseña"
                android:id="@+id/eContraseña"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/recontraseña" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contraseña"
                android:id="@+id/eReContraseña"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrar"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:background="@color/aqua"
                android:id="@+id/bRegistrar"
                android:onClick="Registrar"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textColor="@color/indigo"
                android:textSize="20dp"
                android:id="@+id/tInfo"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
